[package]
name = "diag-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Independent reimplementation of the Qualcomm DIAG capture protocol core — see spec/diag-protocol.md"

[dependencies]
# Compression is an implementation choice, not protocol expression (spec
# §8) — a standard crate here doesn't touch the clean-room boundary the
# way hand-rolling the protocol layers does.
flate2 = "1"
# Real RRC content decode (spec §7's RRC-content heuristics) - generated
# fresh from public 3GPP spec text via the independent hampi compiler,
# see asn1-specs/README.md for provenance.
asn1-codecs = "0.7.2"
lte-rrc-asn1 = { path = "../asn1-specs" }
